fix: possibly fix annoying warning